fix: userMessage&UsersMessages: added  white-space: nowrap; for the time

--- a/client/src/pages/chat/components/messages/components/usersMessages/UsersMessages.module.scss
+++ b/client/src/pages/chat/components/messages/components/usersMessages/UsersMessages.module.scss
@@ -33,6 +33,7 @@
             font-size: 12px;
             height: 100%;
             align-items: end;
+            white-space: nowrap;
          }
       }
    }
